--- a/server/package.json
+++ b/server/package.json
@@ -29,13 +29,13 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
     "morgan": "^1.10.1",
     "winston": "^3.17.0"
   },
-    "devDependencies": {
-    "@types/styled-components": "^5.1.34",
+  "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/chai": "^5.2.2",
     "@types/chai-http": "^3.0.5",
@@ -43,10 +43,12 @@
     "@types/expect": "^1.20.4",
     "@types/express": "^5.0.3",
     "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
+    "@types/styled-components": "^5.1.34",
     "chai": "^5.3.1",
     "chai-http": "^5.1.2",
     "mocha": "^11.7.1",
